refactor cos.map